--- a/ncomp-maven-xcore/pom.xml
+++ b/ncomp-maven-xcore/pom.xml
@@ -13,7 +13,7 @@
 		<openecomp.nexus.releases>https://nexus.openecomp.org/content/repositories/releases/</openecomp.nexus.releases>
 		<openecomp.nexus.snapshots>https://nexus.openecomp.org/content/repositories/snapshots/</openecomp.nexus.snapshots>
 		<openecomp.nexus.proxy>https://nexus.openecomp.org</openecomp.nexus.proxy>
-		<openecomp.nexus.staging.serverId>https://nexus.openecomp.org/content/repositories/snapshots/</openecomp.nexus.staging.serverId>
+		<openecomp.nexus.staging.serverId>ecomp-staging</openecomp.nexus.staging.serverId>
 		<openecomp.nexus.staging.profileId>https://nexus.openecomp.org/content/repositories/snapshots/</openecomp.nexus.staging.profileId>
 	</properties>
 
@@ -32,7 +32,7 @@
                 <version>1.6.7</version>
                 <extensions>true</extensions>
                 <configuration>
-                    <serverId>${openecomp.nexus.staging.profileId}</serverId>
+                    <serverId>${openecomp.nexus.staging.serverId}</serverId>
                     <nexusUrl>${openecomp.nexus.proxy}</nexusUrl>
                     <stagingProfileId>${openecomp.nexus.staging.profileId}</stagingProfileId>
                 </configuration>
