--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.openecomp.ncomp.maven</groupId>
 	<artifactId>ncomp-maven</artifactId>
@@ -10,12 +10,12 @@
 	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	  <maven.compiler.target>1.7</maven.compiler.target>
 	  <maven.compiler.source>1.7</maven.compiler.source>
-		<openecomp.nexus.releases>https://nexus.openecomp.org/content/repositories/releases/</openecomp.nexus.releases>
-		<openecomp.nexus.snapshots>https://nexus.openecomp.org/content/repositories/snapshots/</openecomp.nexus.snapshots>
-		<openecomp.nexus.proxy>https://nexus.openecomp.org</openecomp.nexus.proxy>
+		<openecomp.nexus.releases>https://nexus.onap.org/content/repositories/releases/</openecomp.nexus.releases>
+		<openecomp.nexus.snapshots>https://nexus.onap.org/content/repositories/snapshots/</openecomp.nexus.snapshots>
+		<openecomp.nexus.proxy>https://nexus.onap.org</openecomp.nexus.proxy>
 		<openecomp.nexus.staging.serverId>ecomp-staging</openecomp.nexus.staging.serverId>
 		<openecomp.nexus.staging.profileId>176c31dfe190a</openecomp.nexus.staging.profileId>
-	</properties>
+	<nexusproxy>https://nexus.onap.org</nexusproxy></properties>
 
 	
 		
@@ -67,8 +67,8 @@
 				<url>${openecomp.nexus.snapshots}</url>
 			</snapshotRepository>
 			<site>
-				<id>dcae-javadoc</id>
-				<url>${site.urlroot}/${project.artifactId}/${project.version}/</url>
+				<id>ecomp-site</id>
+				<url>dav:${nexusproxy}/content/sites/site/org/openecomp/ncomp/maven/${project.artifactId}/${project.version}/</url>
 			</site>
 		</distributionManagement>
 	
