--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>ncomp-maven</artifactId>
   	<version>1.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-
+        <name>ncomp-maven</name>
 
 
 	<properties>
